src/objects/gdf_Smart_Meter_Gas__c.object
<CustomObject>
    <fields>
        <fullName>gdf_Date__c</fullName>
        <description>date readings are taken on. for each date there will be 24 hours of readings for several meters.</description>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>gdf_Meter_1_00_00__c</fullName>
        <description>Meter 1 reading at 00:00</description>
        <label>Meter 1 00:00</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gdf_Meter_1_01_00__c</fullName>
        <label>Meter 1 01:00</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gdf_Meter_1_02_00__c</fullName>
        <label>Meter 1 02:00</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <label>Smart Meter Gas</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Smart Meter Gas Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Smart Meter Gas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>